[package]
authors = ["Arvid Norlander"]
categories = ["command-line-utilities", "hardware-support"]
description = "Keyboard backlight timeout daemon for laptops"
edition = "2021"
exclude = ["/pkgs"]
keywords = ["keyboard", "backlight", "laptop", "thinkpad"]
license = "GPL-3.0-only"
name = "keyboard-backlightd"
repository = "https://github.com/VorpalBlade/keyboard-backlightd"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
]

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
env_logger = { version = "0.10.0", default-features = false }
evdev-rs = "0.6.1"
libc = "0.2.142"
log = "0.4.17"
nix = { version = "0.26.2", default-features = false, features = [
    "event",
    "inotify",
] }
smallvec = { version = "1.10.0", features = [
    "const_generics",
    "const_new",
    "union",
] }
xflags = "0.3.1"
