[package]
authors = ["Arvid Norlander"]
categories = ["command-line-utilities", "hardware-support"]
description = "Keyboard backlight timeout daemon for laptops"
edition = "2021"
exclude = ["/pkgs"]
keywords = ["keyboard", "backlight", "laptop", "thinkpad"]
license = "GPL-3.0-only"
name = "keyboard-backlightd"
repository = "https://github.com/VorpalBlade/keyboard-backlightd"
rust-version = "1.74.0"
version = "0.1.11"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[profile.profiling]
debug = true
inherits = "release"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
]

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.13", features = [
    "derive",
    "error-context",
    "help",
    "std",
], default-features = false }
env_logger = { version = "0.11.5", default-features = false }
evdev-rs = "0.6.1"
log = "0.4.22"
nix = { version = "0.29.0", default-features = false, features = [
    "event",
    "inotify",
] }
smallvec = { version = "1.13.2", features = [
    "const_generics",
    "const_new",
    "union",
] }
